...
                          children: [
                            TextSpan(text: 'Earn '),
                            TextSpan(
                              text: 'RBX Rewards ',
                              style: TextStyle(color: Color(0xFF5637E6)),
                            ),
                            TextSpan(text: 'Daily'),
                          ],
                        ),
                      ),
                    ),
                  ),
                  const Spacer(flex: 1),
...
